[gd_scene load_steps=6 format=3 uid="uid://be6omgbo75nmr"]

[ext_resource type="Script" path="res://Gundam project/Code/headvulcan.gd" id="1_f6r48"]
[ext_resource type="PackedScene" uid="uid://cl8rh7jq8ar0o" path="res://Gundam project/Scenes/Bullet_vulcan.tscn" id="2_kwll3"]
[ext_resource type="Texture2D" uid="uid://d2i733ayvuwhl" path="res://Gundam project/Sprites/zk_gun_aim.png" id="3_4vn5l"]
[ext_resource type="AudioStream" uid="uid://ca6np10p3a5n2" path="res://Gundam project/SFX/vulcan.wav" id="4_0ry72"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rnkvp"]
radius = 392.51

[node name="headvulcan" type="Node2D"]
position = Vector2(-21, 19)
script = ExtResource("1_f6r48")
Bullet = ExtResource("2_kwll3")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(129, 0)
texture = ExtResource("3_4vn5l")

[node name="Gun_direction" type="Marker2D" parent="."]
position = Vector2(258, 0)

[node name="EndOfGun" type="Marker2D" parent="."]
position = Vector2(87, 0)

[node name="vulcan_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_rnkvp")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0ry72")
volume_db = -30.0

[connection signal="timeout" from="vulcan_timer" to="." method="_on_main_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
